--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-router": "^6.7.0",
+    "react-router-dom": "^6.7.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
