--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-app-env": "^1.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-router": "^6.7.0",
