--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.4",
+    "@types/react-howler": "^5.2.0",
     "dotenv": "^16.0.3",
+    "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-app-env": "^1.2.3",
     "react-dom": "^18.2.0",
